@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -20,7 +20,6 @@
 package org.sonar.alm.client.github;
 
 import com.google.gson.Gson;
-
 import java.io.IOException;
 import java.net.URI;
 import java.util.Arrays;
@@ -32,7 +31,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import javax.annotation.Nullable;
-
 import org.sonar.alm.client.github.GithubApplicationHttpClient.GetResponse;
 import org.sonar.alm.client.github.GithubBinding.GsonGithubRepository;
 import org.sonar.alm.client.github.GithubBinding.GsonInstallations;
@@ -52,7 +50,6 @@ import static java.lang.String.format;
 import static java.net.HttpURLConnection.HTTP_FORBIDDEN;
 import static java.net.HttpURLConnection.HTTP_OK;
 import static java.net.HttpURLConnection.HTTP_UNAUTHORIZED;
-import static java.util.stream.Collectors.toList;
 
 public class GithubApplicationClientImpl implements GithubApplicationClient {
   private static final Logger LOG = Loggers.get(GithubApplicationClientImpl.class);
@@ -103,7 +100,6 @@ public class GithubApplicationClientImpl implements GithubApplicationClient {
     Map<String, String> permissions = new HashMap<>();
     permissions.put("checks", WRITE_PERMISSION_NAME);
     permissions.put("pull_requests", WRITE_PERMISSION_NAME);
-    permissions.put("statuses", READ_PERMISSION_NAME);
     permissions.put("metadata", READ_PERMISSION_NAME);
 
     String endPoint = "/app";
@@ -121,7 +117,7 @@ public class GithubApplicationClientImpl implements GithubApplicationClient {
       List<String> missingPermissions = permissions.entrySet().stream()
         .filter(permission -> !Objects.equals(permission.getValue(), perms.get(permission.getKey())))
         .map(Map.Entry::getKey)
-        .collect(toList());
+        .toList();
 
       if (!missingPermissions.isEmpty()) {
         String message = missingPermissions.stream()
@@ -155,7 +151,7 @@ public class GithubApplicationClientImpl implements GithubApplicationClient {
         organizations.setOrganizations(gsonInstallations.get().installations.stream()
           .map(gsonInstallation -> new Organization(gsonInstallation.account.id, gsonInstallation.account.login, null, null, null, null, null,
             gsonInstallation.targetType))
-          .collect(toList()));
+          .toList());
       }
 
       return organizations;
@@ -184,7 +180,7 @@ public class GithubApplicationClientImpl implements GithubApplicationClient {
       if (gsonRepositories.get().items != null) {
         repositories.setRepositories(gsonRepositories.get().items.stream()
           .map(GsonGithubRepository::toRepository)
-          .collect(toList()));
+          .toList());
       }
 
       return repositories;
