@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -49,6 +49,7 @@ import org.sonar.db.ce.CeTaskCharacteristicDto;
 import org.sonar.db.ce.DeleteIf;
 import org.sonar.db.component.ComponentDto;
 import org.sonar.db.user.UserDto;
+import org.sonar.server.platform.NodeInformation;
 import org.sonar.server.property.InternalProperties;
 
 import static com.google.common.base.Preconditions.checkState;
@@ -68,11 +69,13 @@ public class CeQueueImpl implements CeQueue {
   private final System2 system2;
   private final DbClient dbClient;
   private final UuidFactory uuidFactory;
+  protected final NodeInformation nodeInformation;
 
-  public CeQueueImpl(System2 system2, DbClient dbClient, UuidFactory uuidFactory) {
+  public CeQueueImpl(System2 system2, DbClient dbClient, UuidFactory uuidFactory, NodeInformation nodeInformation) {
     this.system2 = system2;
     this.dbClient = dbClient;
     this.uuidFactory = uuidFactory;
+    this.nodeInformation = nodeInformation;
   }
 
   @Override
@@ -135,7 +138,7 @@ public class CeQueueImpl implements CeQueue {
       List<CeQueueDto> taskDtos = submissions.stream()
         .filter(filterBySubmitOptions(options, submissions, dbSession))
         .map(submission -> addToQueueInDb(dbSession, submission))
-        .collect(Collectors.toList());
+        .toList();
       List<CeTask> tasks = loadTasks(dbSession, taskDtos);
       dbSession.commit();
       return tasks;
@@ -243,6 +246,7 @@ public class CeQueueImpl implements CeQueue {
 
   private void cancelImpl(DbSession dbSession, CeQueueDto q) {
     CeActivityDto activityDto = new CeActivityDto(q);
+    activityDto.setNodeName(nodeInformation.getNodeName().orElse(null));
     activityDto.setStatus(CeActivityDto.Status.CANCELED);
     remove(dbSession, q, activityDto);
   }
@@ -251,13 +255,14 @@ public class CeQueueImpl implements CeQueue {
   public void fail(DbSession dbSession, CeQueueDto task, @Nullable String errorType, @Nullable String errorMessage) {
     checkState(IN_PROGRESS.equals(task.getStatus()), "Task is not in-progress and can't be marked as failed [uuid=%s]", task.getUuid());
     CeActivityDto activityDto = new CeActivityDto(task);
+    activityDto.setNodeName(nodeInformation.getNodeName().orElse(null));
     activityDto.setStatus(CeActivityDto.Status.FAILED);
     activityDto.setErrorType(errorType);
     activityDto.setErrorMessage(errorMessage);
     updateExecutionFields(activityDto);
     remove(dbSession, task, activityDto);
   }
-
+  
   protected long updateExecutionFields(CeActivityDto activityDto) {
     Long startedAt = activityDto.getStartedAt();
     if (startedAt == null) {
