@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -60,7 +60,7 @@ public class SiblingsIssuesLoader {
       return dbClient.issueDao().selectOpenByComponentUuids(session, uuids)
         .stream()
         .map(SiblingsIssuesLoader::toSiblingIssue)
-        .collect(Collectors.toList());
+        .toList();
     }
   }
 
