@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -91,7 +91,7 @@ public class MetricRepositoryImpl implements MetricRepository, Startable {
   public List<Metric> getMetricsByType(Metric.MetricType type) {
     verifyMetricsInitialized();
     
-    return metricsByKey.values().stream().filter(m -> m.getType() == type).collect(Collectors.toList());
+    return metricsByKey.values().stream().filter(m -> m.getType() == type).toList();
   }
 
   private void verifyMetricsInitialized() {
