@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -184,7 +184,7 @@ public class Log4JPropertiesBuilder extends AbstractLogHelper {
       .filter(loggerName -> !ROOT_LOGGER_NAME.equals(loggerName))
       .distinct()
       .sorted()
-      .collect(Collectors.toList());
+      .toList();
     if (!loggerNames.isEmpty()) {
       putProperty("loggers", loggerNames.stream().collect(Collectors.joining(",")));
     }
