@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -26,7 +26,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.sonar.api.server.authentication.IdentityProvider;
 
@@ -53,7 +52,7 @@ public class IdentityProviderRepository {
     return providersByKey.values().stream()
       .filter(IS_ENABLED_FILTER)
       .sorted(Comparator.comparing(TO_NAME))
-      .collect(Collectors.toList());
+      .toList();
   }
 
 }
