@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -219,6 +219,6 @@ public class IndexCreator implements Startable {
     return Arrays.stream(client.getIndex(new GetIndexRequest("_all")).getIndices())
       .filter(definedNames::contains)
       .filter(index -> !DESCRIPTOR.getName().equals(index))
-      .collect(Collectors.toList());
+      .toList();
   }
 }
