@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,12 +19,11 @@
  */
 package org.sonar.server.issue.ws;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.common.io.Resources;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
 import javax.annotation.Nullable;
 import org.sonar.api.resources.Qualifiers;
 import org.sonar.api.resources.Scopes;
@@ -127,11 +126,10 @@ public class AuthorsAction implements IssuesWsAction {
     ofNullable(project).ifPresent(p -> {
       switch (p.qualifier()) {
         case Qualifiers.PROJECT:
-          issueQueryBuilder.projectUuids(ImmutableSet.of(p.uuid()));
+          issueQueryBuilder.projectUuids(Set.of(p.uuid()));
           return;
-        case Qualifiers.APP:
-        case Qualifiers.VIEW:
-          issueQueryBuilder.viewUuids(ImmutableSet.of(p.uuid()));
+        case Qualifiers.APP, Qualifiers.VIEW:
+          issueQueryBuilder.viewUuids(Set.of(p.uuid()));
           return;
         default:
           throw new IllegalArgumentException(String.format("Component of type '%s' is not supported", p.qualifier()));
@@ -139,7 +137,7 @@ public class AuthorsAction implements IssuesWsAction {
     });
     return issueIndex.searchAuthors(
       issueQueryBuilder
-        .types(ALL_RULE_TYPES_EXCEPT_SECURITY_HOTSPOTS.stream().map(Enum::name).collect(Collectors.toList()))
+        .types(ALL_RULE_TYPES_EXCEPT_SECURITY_HOTSPOTS.stream().map(Enum::name).toList())
         .build(),
       request.param(TEXT_QUERY),
       request.mandatoryParamAsInt(PAGE_SIZE));
