@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -117,6 +117,6 @@ public class PendingAction implements PluginsWsAction {
         Plugin plugin = compatiblePluginsByKey.get(pluginInfo.getKey());
         return buildPluginDetails(null, pluginInfo, null, plugin);
       })
-      .collect(Collectors.toList());
+      .toList();
   }
 }
