@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -41,7 +41,6 @@ import org.sonarqube.ws.ProjectAnalyses.SearchResponse;
 
 import static java.lang.String.format;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static org.sonar.api.utils.DateUtils.formatDateTime;
 import static org.sonar.core.util.stream.MoreCollectors.index;
 import static org.sonar.server.projectanalysis.ws.EventCategory.fromLabel;
@@ -112,9 +111,6 @@ class SearchResponseBuilder {
         case QUALITY_GATE:
           addQualityGateInformation(dbEvent);
           break;
-        case VERSION:
-        case OTHER:
-        case QUALITY_PROFILE:
         default:
           break;
       }
@@ -144,7 +140,7 @@ class SearchResponseBuilder {
 
     wsQualityGate.addAllFailing(eventComponentChangeDtos.stream()
       .map(SearchResponseBuilder::toFailing)
-      .collect(toList()));
+      .toList());
     wsEvent.setQualityGate(wsQualityGate.build());
   }
 
@@ -163,7 +159,7 @@ class SearchResponseBuilder {
         componentChangeByKey.asMap().values().stream()
           .map(SearchResponseBuilder::addChange)
           .map(Project::toProject)
-          .collect(toList())
+          .toList()
       );
       wsEvent.setDefinitionChange(wsDefinitionChange.build());
     } catch (IllegalStateException e) {
