@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2022 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -25,7 +25,6 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import org.sonar.api.rule.RuleKey;
 import org.sonar.db.qualityprofile.ActiveRuleDto;
@@ -186,7 +185,7 @@ public class RuleActivationContext {
     loadDescendants();
     return getProfiles().stream()
       .flatMap(p -> profilesByParentUuid.get(p.getKee()).stream())
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private void loadDescendants() {
@@ -197,8 +196,8 @@ public class RuleActivationContext {
       .filter(p -> p.getRulesProfileUuid().equals(baseRulesProfile.getUuid()))
       .collect(toArrayList(profilesByUuid.size()));
     DescendantProfilesSupplier.Result result = descendantProfilesSupplier.get(baseProfiles, rulesByUuid.keySet());
-    register(result.getProfiles());
-    register(result.getActiveRules(), result.getActiveRuleParams());
+    register(result.profiles());
+    register(result.activeRules(), result.activeRuleParams());
     descendantsLoaded = true;
   }
 
@@ -228,7 +227,7 @@ public class RuleActivationContext {
     this.currentRulesProfile = ruleProfile;
     this.currentProfiles = profilesByUuid.values().stream()
       .filter(p -> p.getRulesProfileUuid().equals(ruleProfile.getUuid()))
-      .collect(Collectors.toList());
+      .toList();
     this.currentActiveRule = this.activeRulesByKey.get(ActiveRuleKey.of(ruleProfile, ruleKey));
     this.currentParentActiveRule = this.currentProfiles.stream()
       .map(QProfileDto::getParentKee)
